--- a/products/test.html
+++ b/products/test.html
@@ -63,6 +63,7 @@
                      <a class="dropdown-item" href="../products/chandelier.html">CHANDELIERS</a>
                      <a class="dropdown-item" href="../products/table.html">TABLE LAMPS</a>
                      <a class="dropdown-item" href="../products/ceilin.html">CEILING LIGHTS</a>
+                     <a class="dropdown-item" href="../products/panels.html">PANEL LAMPS</a>
                      <a class="dropdown-item" href="../products/accessories.html">LED ACCESSORIES</a>
                    </div>
                  </li>
@@ -90,10 +91,26 @@
             </nav>
          </div>
          <!-- banner section start --> 
-         <!-- <div class="banner_section layout_padding">
+         <div class="banner_section layout_padding">
             <div class="container">
                <div id="banner_slider" class="carousel slide" data-ride="carousel">
                   <div class="carousel-inner">
+                     <div class="carousel-item">
+                        <div class="row">
+                           <div class="col-md-6">
+                              <div class="banner_img"><img src="img/dls/header/downlight.jpg"></div>
+                           </div>
+                           <div class="col-md-6">
+                              <h1>DOWN LIGHT SERIES</h1>
+                              <div class="banner_taital_main">
+                                <div class="banner_taital_main">
+                                 <h1 class="banner_taital">DOWN LIGHTS SERIES</h1>
+                                 <p class="banner_text">ALL ELEGANT DESIGNS AVAILABLE</p>
+                               </div>
+                              </div>
+                           </div>
+                        </div>
+                     </div>
                      <div class="carousel-item active">
                         <div class="row">
                            <div class="col-md-6">
@@ -108,20 +125,7 @@
                            </div>
                         </div>
                      </div>
-                     <div class="carousel-item">
-                        <div class="row">
-                           <div class="col-md-6">
-                              <div class="banner_img"><img src="img/dls/header/downlight.jpg"></div>
-                           </div>
-                           <div class="col-md-6">
-                              <div class="banner_taital_main">
-                                <div class="banner_taital_main">
-                                 <h1 class="banner_taital">PANEL LAMPS</h1>
-                               </div>
-                              </div>
-                           </div>
-                        </div>
-                     </div>
+                     
                      <div class="carousel-item">
                         <div class="row">
                            <div class="col-md-6">
@@ -143,14 +147,14 @@
                   <a class="carousel-control-next" href="#banner_slider" role="button" data-slide="next">
                   <i class="fa fa-arrow-right"></i>
                   </a>
-               </div> -->
+               </div>
             </div>
          </div>
          <!-- banner section end -->
       </div>
       <!-- header section end -->
       <!-- LIGHTS section start -->
-      <div class="coffee_section layout_padding" style="margin-bottom: 60px;">
+      <!-- <div class="coffee_section layout_padding" style="margin-bottom: 60px;">
          <div class="container">
             <div class="row">
                <h1 class="coffee_taital">OUR ITEMS</h1>
@@ -164,20 +168,20 @@
                      <div class="container-fluid">
                         <div class="row">
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/walls/bulk-head-oval.jpg"></div>
-                              <h3 class="types_text">BULK HEAD OVAL</h3>
+                              <div class="coffee_img"><img src="img/dls/dl-00031.jpeg"></div>
+                              <h3 class="types_text">DL-0031</h3>
                            </div>
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/walls/bulk-head-round.jpg"></div>
-                              <h3 class="types_text">BULK HEAD ROUND</h3>
+                              <div class="coffee_img"><img src="img/dls/dl-0026.jpeg"></div>
+                              <h3 class="types_text">DL-0026</h3>
                            </div>
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/walls/new-bulk.jpg"></div>
-                              <h3 class="types_text">NEW BULK HEAD DESIGN</h3>
+                              <div class="coffee_img"><img src="img/dls/dl-0027.jpeg"></div>
+                              <h3 class="types_text">DL-0027</h3>
                            </div>
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/walls/wall1.jpeg"></div>
-                              <h3 class="types_text">WALL LAMP</h3>
+                              <div class="coffee_img"><img src="img/dls/dl-0028.jpeg"></div>
+                              <h3 class="types_text">DL-0028</h3>
                            </div>
                         </div>
                      </div>
@@ -213,7 +217,7 @@
                </a>
             </div>
          </div>
-      </div>
+      </div> -->
       <!-- LIGHTS section end -->
       <!-- LIGHTS section start -->
       <div class="coffee_section layout_padding" style="margin-bottom: 60px;">
@@ -230,27 +234,27 @@
                      <div class="container-fluid">
                         <div class="row">
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/walls/wl2.jpeg"></div>
-                              <h3 class="types_text">WALL LAMP</h3>
+                              <div class="coffee_img"><img src="img/dls/dl-0029.jpeg"></div>
+                              <h3 class="types_text">DL-0029</h3>
                            </div>
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/walls/wl3.jpeg"></div>
-                              <h3 class="types_text">WALL LAMP</h3>
+                              <div class="coffee_img"><img src="img/dls/dl-0032.jpeg"></div>
+                              <h3 class="types_text">DL-0032</h3>
                            </div>
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/walls/wl4.jpeg"></div>
-                              <h3 class="types_text">WALL LAMP</h3>
+                              <div class="coffee_img"><img src="img/dls/dl-0036.jpeg"></div>
+                              <h3 class="types_text">DL-0036</h3>
                            </div>
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/walls/wl5.jpeg"></div>
-                              <h3 class="types_text">WALL LAMP</h3>
+                              <div class="coffee_img"><img src="img/dls/dl-0037.jpeg"></div>
+                              <h3 class="types_text">DL-0037</h3>
                            </div>
                         </div>
                      </div>
                   </div>
             </div>
-         </div> -->
-      </div>
+         </div>
+      </div> -->
       <!-- LIGHTS section end -->
       <!-- LIGHTS section start -->
       <div class="coffee_section layout_padding" style="margin-bottom: 60px;">
