--- a/support.html
+++ b/support.html
@@ -169,19 +169,20 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Products</a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="products.html">ALL PRODUCTS</a>
-              <a class="dropdown-item" href="./products/strip.html">STRIP LIGHTS</a>
-              <a class="dropdown-item" href="./products/flood.html">FLOOD LIGHTS</a>
-              <a class="dropdown-item" href="./products/led_bulb.html">LED BULBS</a>
-              <a class="dropdown-item" href="./products/filament.html">FILAMENT BULBS</a>
-              <a class="dropdown-item" href="./products/wall.html">WALL LAMPS</a>
-              <a class="dropdown-item" href="./products/down.html">DOWN LIGHT</a>
-              <a class="dropdown-item" href="./products/track.html">TRACK LIGHTS</a>
-              <a class="dropdown-item" href="./products/street.html">STREET LIGHTS</a>
-              <a class="dropdown-item" href="./products/chandelier.html">CHANDELIERS</a>
-              <a class="dropdown-item" href="./products/table.html">TABLE LAMPS</a>
-              <a class="dropdown-item" href="./products/ceilin.html">CEILING LIGHTS</a>
-              <a class="dropdown-item" href="./products/accessories.html">LED ACCESSORIES</a>
+              <a class="dropdown-item" href="../products.html">ALL PRODUCTS</a>
+              <a class="dropdown-item" href="../products/strip.html">STRIP LIGHTS</a>
+              <a class="dropdown-item" href="../products/flood.html">FLOOD LIGHTS</a>
+              <a class="dropdown-item" href="../products/led_bulb.html">LED BULBS</a>
+              <a class="dropdown-item" href="../products/filament.html">FILAMENT BULBS</a>
+              <a class="dropdown-item" href="../products/wall.html">WALL LAMPS</a>
+              <a class="dropdown-item" href="../products/down.html">DOWN LIGHT</a>
+              <a class="dropdown-item" href="../products/track.html">TRACK LIGHTS</a>
+              <a class="dropdown-item" href="../products/street.html">STREET LIGHTS</a>
+              <a class="dropdown-item" href="../products/chandelier.html">CHANDELIERS</a>
+              <a class="dropdown-item" href="../products/table.html">TABLE LAMPS</a>
+              <a class="dropdown-item" href="../products/ceilin.html">CEILING LIGHTS</a>
+              <a class="dropdown-item" href="../products/panels.html">PANEL LAMPS</a>
+              <a class="dropdown-item" href="../products/accessories.html">LED ACCESSORIES</a>
             </div>
           </li>
           <li class="nav-item">
