--- a/products/led_bulb.html
+++ b/products/led_bulb.html
@@ -62,6 +62,7 @@
                      <a class="dropdown-item" href="../products/chandelier.html">CHANDELIERS</a>
                      <a class="dropdown-item" href="../products/table.html">TABLE LAMPS</a>
                      <a class="dropdown-item" href="../products/ceilin.html">CEILING LIGHTS</a>
+                     <a class="dropdown-item" href="../products/panels.html">PANEL LAMPS</a>
                      <a class="dropdown-item" href="../products/accessories.html">LED ACCESSORIES</a>
                    </div>
                  </li>
