--- a/products/wall.html
+++ b/products/wall.html
@@ -63,8 +63,8 @@
                      <a class="dropdown-item" href="../products/chandelier.html">CHANDELIERS</a>
                      <a class="dropdown-item" href="../products/table.html">TABLE LAMPS</a>
                      <a class="dropdown-item" href="../products/ceilin.html">CEILING LIGHTS</a>
+                     <a class="dropdown-item" href="../products/panels.html">PANEL LAMPS</a>
                      <a class="dropdown-item" href="../products/accessories.html">LED ACCESSORIES</a>
-                   </div>
                  </li>
                  <li class="nav-item">
                    <a class="nav-link" href="../about.html">About</a>
