working on panel lamps

--- a/products/test.html
+++ b/products/test.html
@@ -9,7 +9,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>Neelux | Down Lights</title>
+      <title>Neelux | Panel Lamps</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -91,36 +91,34 @@
             </nav>
          </div>
          <!-- banner section start --> 
-         <div class="banner_section layout_padding">
+         <!-- <div class="banner_section layout_padding">
             <div class="container">
                <div id="banner_slider" class="carousel slide" data-ride="carousel">
                   <div class="carousel-inner">
-                     <div class="carousel-item">
+                     <div class="carousel-item active">
                         <div class="row">
                            <div class="col-md-6">
-                              <div class="banner_img"><img src="img/dls/header/downlight.jpg"></div>
+                              <div class="banner_img"><img src="img/panel/display/downlight.jpg"></div>
                            </div>
                            <div class="col-md-6">
-                              <h1>DOWN LIGHT SERIES</h1>
                               <div class="banner_taital_main">
-                                <div class="banner_taital_main">
-                                 <h1 class="banner_taital">DOWN LIGHTS SERIES</h1>
-                                 <p class="banner_text">ALL ELEGANT DESIGNS AVAILABLE</p>
-                               </div>
+                                 <h1 class="banner_taital">PANEL </h1>
+                                 <h5 class="tasty_text">LAMPS </h5>
+                                 <p class="banner_text">MULTI-COLORED</p>
                               </div>
                            </div>
                         </div>
                      </div>
-                     <div class="carousel-item active">
+                     <div class="carousel-item">
                         <div class="row">
                            <div class="col-md-6">
-                              <div class="banner_img"><img src="img/dls/header/dl-0028.jpg"></div>
+                              <div class="banner_img"><img src="img/panel/display/panel surface.jpg"></div>
                            </div>
                            <div class="col-md-6">
                               <div class="banner_taital_main">
-                                 <h1 class="banner_taital">DL-0028 </h1>
-                                 <h5 class="tasty_text">UNIQUE</h5>
-                                 <p class="banner_text">DESIGN</p>
+                                 <h1 class="banner_taital">PANEL LAMP </h1>
+                                 <h5 class="tasty_text">SURFACE (ROUND AND SQUARE)</h5>
+                                 <p class="banner_text">WHITE</p>
                               </div>
                            </div>
                         </div>
@@ -129,12 +127,12 @@
                      <div class="carousel-item">
                         <div class="row">
                            <div class="col-md-6">
-                              <div class="banner_img"><img src="img/dls/header/dl-0032.jpg"></div>
+                              <div class="banner_img"><img src="img/panel/display/down lih.jpg"></div>
                            </div>
                            <div class="col-md-6">
                             <div class="banner_taital_main">
-                              <h1 class="banner_taital">DL-0032</h1>
-                              <h5 class="tasty_text">ELEGANT</h5>
+                              <h1 class="banner_taital">GLASS PANEL</h1>
+                              <h5 class="tasty_text">RECESS</h5>
                            </div>
                               </div>
                            </div>
@@ -149,12 +147,12 @@
                   </a>
                </div>
             </div>
-         </div>
+         </div> -->
          <!-- banner section end -->
       </div>
       <!-- header section end -->
       <!-- LIGHTS section start -->
-      <!-- <div class="coffee_section layout_padding" style="margin-bottom: 60px;">
+      <div class="coffee_section layout_padding" style="margin-bottom: 60px;">
          <div class="container">
             <div class="row">
                <h1 class="coffee_taital">OUR ITEMS</h1>
@@ -168,25 +166,25 @@
                      <div class="container-fluid">
                         <div class="row">
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/dls/dl-00031.jpeg"></div>
+                              <div class="coffee_img"><img src="img/panel/packeddl.jpeg"></div>
                               <h3 class="types_text">DL-0031</h3>
                            </div>
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/dls/dl-0026.jpeg"></div>
+                              <div class="coffee_img"><img src="img/panel/surf.jpg"></div>
                               <h3 class="types_text">DL-0026</h3>
                            </div>
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/dls/dl-0027.jpeg"></div>
+                              <div class="coffee_img"><img src="img/panel/recess panel.jpg"></div>
                               <h3 class="types_text">DL-0027</h3>
                            </div>
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/dls/dl-0028.jpeg"></div>
+                              <div class="coffee_img"><img src="img/panel/downlight-recess.jpeg"></div>
                               <h3 class="types_text">DL-0028</h3>
                            </div>
                         </div>
                      </div>
                   </div>
-                  <div class="carousel-item">
+                  <!-- <div class="carousel-item">
                      <div class="container-fluid">
                         <div class="row">
                            <div class="col-lg-3 col-md-6">
@@ -208,7 +206,7 @@
                         </div>
                      </div>
                   </div>
-               </div>
+               </div> -->
                <a class="carousel-control-prev" href="#main_slider" role="button" data-slide="prev">
                <i class="fa fa-arrow-left"></i>
                </a>
@@ -217,7 +215,7 @@
                </a>
             </div>
          </div>
-      </div> -->
+      </div>
       <!-- LIGHTS section end -->
       <!-- LIGHTS section start -->
       <div class="coffee_section layout_padding" style="margin-bottom: 60px;">
