panel lamps page complete

--- a/products/test.html
+++ b/products/test.html
@@ -91,7 +91,7 @@
             </nav>
          </div>
          <!-- banner section start --> 
-         <!-- <div class="banner_section layout_padding">
+         <div class="banner_section layout_padding">
             <div class="container">
                <div id="banner_slider" class="carousel slide" data-ride="carousel">
                   <div class="carousel-inner">
@@ -116,7 +116,7 @@
                            </div>
                            <div class="col-md-6">
                               <div class="banner_taital_main">
-                                 <h1 class="banner_taital">PANEL LAMP </h1>
+                                 <h1 class="banner_taital">PANEL</h1>
                                  <h5 class="tasty_text">SURFACE (ROUND AND SQUARE)</h5>
                                  <p class="banner_text">WHITE</p>
                               </div>
@@ -147,7 +147,7 @@
                   </a>
                </div>
             </div>
-         </div> -->
+         </div>
          <!-- banner section end -->
       </div>
       <!-- header section end -->
@@ -166,20 +166,20 @@
                      <div class="container-fluid">
                         <div class="row">
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/panel/packeddl.jpeg"></div>
-                              <h3 class="types_text">DL-0031</h3>
+                              <div class="coffee_img"><img src="img/panel/packeddl.jpg"></div>
+                              <h3 class="types_text">LED DOWNLIGHT RECESS</h3>
                            </div>
                            <div class="col-lg-3 col-md-6">
                               <div class="coffee_img"><img src="img/panel/surf.jpg"></div>
-                              <h3 class="types_text">DL-0026</h3>
+                              <h3 class="types_text">LED PANEL LAMP SURFACE</h3>
                            </div>
                            <div class="col-lg-3 col-md-6">
                               <div class="coffee_img"><img src="img/panel/recess panel.jpg"></div>
-                              <h3 class="types_text">DL-0027</h3>
+                              <h3 class="types_text">PANEL LAMP RECESS</h3>
                            </div>
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/panel/downlight-recess.jpeg"></div>
-                              <h3 class="types_text">DL-0028</h3>
+                              <div class="coffee_img"><img src="img/panel/panel-recess.jpg"></div>
+                              <h3 class="types_text">PANEL </h3>
                            </div>
                         </div>
                      </div>
