worked on header of the striplights page

--- a/products/test.html
+++ b/products/test.html
@@ -9,7 +9,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>Neelux | Panel Lamps</title>
+      <title>Neelux | LED Strip Lights</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -31,7 +31,7 @@
       <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
    </head>
    <body>
-      <div class="header_sett">
+      <div class="header_sector">
          <div class="container-fluid">
             <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top navbar" style="background-color: aliceblue;">
              <!-- Uncomment below if you prefer to use an image logo -->
@@ -98,13 +98,13 @@
                      <div class="carousel-item active">
                         <div class="row">
                            <div class="col-md-6">
-                              <div class="banner_img"><img src="img/panel/display/downlight.jpg"></div>
+                              <div class="banner_img"><img src="img/strips/header/10.jpg"></div>
                            </div>
                            <div class="col-md-6">
                               <div class="banner_taital_main">
-                                 <h1 class="banner_taital">PANEL </h1>
-                                 <h5 class="tasty_text">LAMPS </h5>
-                                 <p class="banner_text">MULTI-COLORED</p>
+                                 <h1 class="banner_taital" style="color: white;">LED STRIP LIGHTS </h1>
+                                 <h5 class="tasty_text" style="color: blue;">DOUBLE EYED </h5>
+                                 <p class="banner_text" style="color: blue;">ALL COLORS</p>
                               </div>
                            </div>
                         </div>
@@ -112,13 +112,13 @@
                      <div class="carousel-item">
                         <div class="row">
                            <div class="col-md-6">
-                              <div class="banner_img"><img src="img/panel/display/panel surface.jpg"></div>
+                              <div class="banner_img"><img src="img/strips/header/3.jpg"></div>
                            </div>
                            <div class="col-md-6">
                               <div class="banner_taital_main">
-                                 <h1 class="banner_taital">PANEL</h1>
-                                 <h5 class="tasty_text">SURFACE (ROUND AND SQUARE)</h5>
-                                 <p class="banner_text">WHITE</p>
+                                 <h1 class="banner_taital" style="color: white;">LED STRIP LIGHTS</h1>
+                                 <h5 class="tasty_text" style="color: blue;">SINGLE EYED</h5>
+                                 <p class="banner_text" style="color: blue;">ALL COLORS</p>
                               </div>
                            </div>
                         </div>
@@ -127,12 +127,12 @@
                      <div class="carousel-item">
                         <div class="row">
                            <div class="col-md-6">
-                              <div class="banner_img"><img src="img/panel/display/down lih.jpg"></div>
+                              <div class="banner_img"><img src="img/strips/header/s3.jpeg"></div>
                            </div>
                            <div class="col-md-6">
                             <div class="banner_taital_main">
-                              <h1 class="banner_taital">GLASS PANEL</h1>
-                              <h5 class="tasty_text">RECESS</h5>
+                              <h1 class="banner_taital" style="color: white;">LED STRIP LIGHTS</h1>
+                              <h5 class="tasty_text" style="color: blue;">MULTI-COLORED</h5>
                            </div>
                               </div>
                            </div>
