completed strip lights page

--- a/products/test.html
+++ b/products/test.html
@@ -166,20 +166,20 @@
                      <div class="container-fluid">
                         <div class="row">
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/panel/packeddl.jpg"></div>
-                              <h3 class="types_text">LED DOWNLIGHT RECESS</h3>
+                              <div class="coffee_img"><img src="img/strips/1.jpg"></div>
+                              <h3 class="types_text">SINGLE EYE STRIP</h3>
                            </div>
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/panel/surf.jpg"></div>
-                              <h3 class="types_text">LED PANEL LAMP SURFACE</h3>
+                              <div class="coffee_img"><img src="img/strips/2.jpg"></div>
+                              <h3 class="types_text">THREE EYE STRIP</h3>
                            </div>
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/panel/recess panel.jpg"></div>
-                              <h3 class="types_text">PANEL LAMP RECESS</h3>
+                              <div class="coffee_img"><img src="img/strips/4.jpeg"></div>
+                              <h3 class="types_text">LED STRIP LIGHTS</h3>
                            </div>
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/panel/panel-recess.jpg"></div>
-                              <h3 class="types_text">PANEL </h3>
+                              <div class="coffee_img"><img src="img/strips/7.jpg"></div>
+                              <h3 class="types_text">DOUBLE EYE STRIP</h3>
                            </div>
                         </div>
                      </div>
@@ -225,34 +225,34 @@
                <div class="bulit_icon"><img src="../images/bulit-icon.png"></div>
             </div>
          </div> -->
-         <!-- <div class="coffee_section_2">
+         <div class="coffee_section_2">
             <div id="main_slider" class="carousel slide" data-ride="carousel">
                <div class="carousel-inner">
                   <div class="carousel-item active">
                      <div class="container-fluid">
                         <div class="row">
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/dls/dl-0029.jpeg"></div>
-                              <h3 class="types_text">DL-0029</h3>
+                              <div class="coffee_img"><img src="img/strips/st.jpg"></div>
+                              <h3 class="types_text">PINK STRIP LIGHT</h3>
                            </div>
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/dls/dl-0032.jpeg"></div>
-                              <h3 class="types_text">DL-0032</h3>
+                              <div class="coffee_img"><img src="img/strips/st2.jpg"></div>
+                              <h3 class="types_text">BLUE STRIP LIGHT</h3>
                            </div>
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/dls/dl-0036.jpeg"></div>
-                              <h3 class="types_text">DL-0036</h3>
+                              <div class="coffee_img"><img src="img/strips/st3.jpg"></div>
+                              <h3 class="types_text">RED STRIP LIGHT</h3>
                            </div>
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/dls/dl-0037.jpeg"></div>
-                              <h3 class="types_text">DL-0037</h3>
+                              <div class="coffee_img"><img src="img/strips/header/bg-1.png"></div>
+                              <h3 class="types_text">RGB STRIPS</h3>
                            </div>
                         </div>
                      </div>
                   </div>
             </div>
          </div>
-      </div> -->
+      </div>
       <!-- LIGHTS section end -->
       <!-- LIGHTS section start -->
       <div class="coffee_section layout_padding" style="margin-bottom: 60px;">
